syntax = "proto3";

option go_package = "subber-go/pb";
package pb; 

option java_package = "subber.pb";
option java_multiple_files = true; 

import "subscription_message.proto";
import "subscription_options.proto";

service Subber {
    rpc Subscription(SubscriptionRequest) returns (stream SubscriptionResponse) {};
    rpc ListOptions(ListOptionsRequest) returns (ListOptionsResponse) {};
//    rpc RemoveSubscription(RemoveSubscriptionRequest) returns (RemoveSubscriptionResponse) {};
}